definitions/mysql_deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-ct
  template:
    metadata:
      labels:
        app: mysql-ct
    spec:
      containers:
      - image: aluguercio/goodluck_repo:mysql8-start_schema
        name: mysql-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: "/var/lib/mysql"
          subPath: "mysql"
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-ct
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
