definitions/phpmyadmin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: phpmyadmin-mysql
  labels:
    app: phpmyadmin-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-mysql
  template:
    metadata:
      labels:
        app: phpmyadmin-mysql
    spec:
      containers:
        - name: phpmyadmin-mysql
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: phpmyadmin-mysql
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
